--- a/Russian.lng
+++ b/Russian.lng
@@ -1,6 +1,6 @@
 ﻿|~LANGUAGENAME|			|Russian|
 |~LANGISO6391CODE|		|ru|
-|~LANGUAGEVERSION|		|1.34|
+|~LANGUAGEVERSION|		|1.35|
 |~LANGUAGEAUTHOR|		|Dmitry Yerokhin, Andrew Gavrushenko|
 |~LANGUAGEAUTHOREMAIL|		|erodim@mail.ru|
 
@@ -224,10 +224,9 @@
 
 |Cannot open temporary file for printing!|	|Невозможно открыть временный файл для печати!|
 
-|Load Language File|		|Загрузка языкового файла|
-|Load a Language File|		|Загрузка языкового файла|
-|Select one of the languages in the list below.|	|Выберите в списке один из языков.|
-|Available Languages|		|Доступные языки|
+|Select Language|		|Выберите язык|
+|Here you can change the user interface language.|	|Здесь можно изменить язык интерфейса программы.|
+|Installed Languages|		|Установленные языки|
 
 |Open &Help File|		|Открыть &справку|
 |Open &License File|		|Открыть &лицензию|
@@ -247,12 +246,11 @@
 
 |Loading error|			|Ошибка загрузки|
 |Language file cannot be opened!|	|Невозможно открыть языковой файл!|
-|Language file cannot be registered!|	|Невозможно зарегистрировать языковой файл!|
-|The language file has been installed.|	|Языковой файл установлен.|
-|You must restart KeePass in order to use the new language.|	|Выбранный язык вступит в силу при перезапуске KeePass.|
+|Language file cannot be activated!|	|Невозможно активировать языковой файл!|
+|The selected language has been activated. KeePass must be restarted in order to load the language.|	|Выбранный язык активирован. Чтобы загрузить этот язык, нужно перезапустить KeePass.|
 |Do you wish to restart KeePass now?|	|Перезапустить KeePass?|
 |Restart KeePass?|		|Перезапустить KeePass?|
-|Application cannot be restarted automatically!|	|Невозможно перезапустить программу автоматически!|
+|Application cannot be restarted automatically!|	|Невозможно автоматически перезапустить программу!|
 |Please restart KeePass manually.|	|Перезапустите KeePass сами.|
 
 |CSV Files|			|Файлы CSV|
@@ -269,7 +267,7 @@
 |&XML File...|			|Файл &XML...|
 |&CSV File...|			|Файл &CSV...|
 
-|&Get more languages...|	|Ещ&ё языки...|
+|Get More &Languages...|	|Ещ&ё языки...|
 |Start and exit|		|Запуск и выход|
 |Interface (GUI)|		|Интерфейс|
 |Files|				|Файлы|
@@ -337,10 +335,16 @@
 
 |About &Translation...|		|О &переводе...|
 |Translation Information|	|Информация о переводе|
-|Currently Used Language|	|Текущий язык|
-|Language File Version|		|Версия языкового файла|
+|Currently used language|	|Текущий язык|
+|File|				|Файл|
 |Author|			|Автор|
-|Translation Author Contact|	|Контакты переводчика|
+|Contact|			|Контакты|
+|Built-in|			|Встроенный|
+|Do you want to open the application directory (in order to move or delete language files)?|	|Открыть папку приложения (чтобы перенести или удалить языковые файлы)?|
+|Loading language files directly from the application directory is not supported. Language files should instead be stored in the 'Languages' folder of the application directory.|	|Загрузка языковых файлов непосредственно из папки приложения не поддерживается. Языковые файлы должны находиться во вложенной папке 'Languages'.|
+|One or more language files have been found in the KeePass application directory.|	|В папке KeePass обнаружены языковые файлы.|
+|Open &Folder|			|Открыть &папку|
+
 |&Rearrange|			|Упор&ядочить|
 |&Sort Group List|		|&Сортировать список групп|
 |Sort List by &Title|		|Сортировать по &названиям|
@@ -776,3 +780,4 @@
 |The attachment is too large|		|Прикрепляемый файл слишком велик|
 |The regular expression is invalid.|	|Некорректное регулярное выражение.|
 |Tray icon|				|Значок в области уведомлений|
+
