--- a/Lithuanian.lng
+++ b/Lithuanian.lng
@@ -2,13 +2,13 @@
 |Lietuvių|
 
 |~LANGUAGEVERSION|
-|1.34|
+|1.35|
 
 |~LANGUAGEAUTHOR|
 |Vytautas Rėkus/Donaldas Apanavičius|
 
 |~LANGUAGEAUTHOREMAIL|
-|v.rekus@gmail.com/donaldas.apanavicius@gmail.com|
+|v.rekus@gmail.com|
 
 |OK|
 |Gerai|
@@ -533,18 +533,6 @@
 |Cannot open temporary file for printing!|
 |Neatsiveria laikinas spausdinimo failas!|
 
-|Load Language File|
-|Įkelti kalbos failą|
-
-|Load a Language File|
-|Įkelti kalbos failą|
-
-|Select one of the languages in the list below.|
-|Sąraše pasirinkite kalbą.|
-
-|Available Languages|
-|Esančios kalbos|
-
 |&Help|
 |&Žinynas|
 
@@ -599,15 +587,6 @@
 |Language file cannot be opened!|
 |Kalbos failas neatsiveria!|
 
-|Language file cannot be registered!|
-|Kalbos failas nesiregistruoja!|
-
-|The language file has been installed.|
-|Kalbos failas įdiegtas.|
-
-|You must restart KeePass in order to use the new language.|
-|Nauja kalba bus naudojama iš naujo paleidus KeePass.|
-
 |Do you wish to restart KeePass now?|
 |Ar norite dabar paleisti KeePass iš naujo?|
 
@@ -658,9 +637,6 @@
 
 |&Import|
 |I&mportuoti|
-
-|&Get more languages...|
-|&Kitos kalbos...|
 
 |Start and exit|
 |Pradėti ir išeiti|
@@ -845,17 +821,8 @@
 |Translation Information|
 |Vertimo informacija|
 
-|Currently Used Language|
-|Naudojama kalba|
-
-|Language File Version|
-|Kalbos failo versija|
-
 |Author|
 |Autorius|
-
-|Translation Author Contact|
-|Vertėjo kontaktai|
 
 |&Rearrange|
 |Per&tvarkyti|
@@ -2055,3 +2022,45 @@
 
 |The attachment is too large|
 |Priedas per didelis|
+
+|Built-in|
+|Vidinis|
+
+|Contact|
+|Kontaktai|
+
+|Currently used language|
+|Naudojama kalba|
+
+|Do you want to open the application directory (in order to move or delete language files)?|
+|Ar norite atverti programos katalogą (norint perkelti ar pašalinti kalbų failus)?|
+
+|File|
+|Failas|
+
+|Get More &Languages...|
+|&Kitos kalbos...|
+
+|Here you can change the user interface language.|
+|Čia galima pakeisti vartotojo sąsajos kalbą.|
+
+|Installed Languages|
+|Įdiegtos kalbos|
+
+|Language file cannot be activated!|
+|Kalbos failas negali būti aktyvuotas!|
+
+|Loading language files directly from the application directory is not supported. Language files should instead be stored in the 'Languages' folder of the application directory.|
+|Kalbos failų įkėlimas iš programos katalogo nepalaikomas. Kalbų failai turi būti įrašyti į programos katalogo aplanką 'Languages'.|
+
+|One or more language files have been found in the KeePass application directory.|
+|Vienas ar daugiau kalbų failų aptikta KeePass programos kataloge.|
+
+|Open &Folder|
+|Atverti &aplanką|
+
+|Select Language|
+|Parinkti kalbą|
+
+|The selected language has been activated. KeePass must be restarted in order to load the language.|
+|Parinktoji kalba aktyvuota. Norėdami įkelti kalbą, iš naujo paleiskite KeePass.|
