--- a/Norwegian_NN.lng
+++ b/Norwegian_NN.lng
@@ -1,5 +1,5 @@
-|~LANGUAGENAME||Norsk (nynorsk)|
-|~LANGUAGEVERSION||1.34|
+﻿|~LANGUAGENAME||Norsk (nynorsk)|
+|~LANGUAGEVERSION||1.35|
 |~LANGUAGEAUTHOR||Yngve Spjeld-Landro|
 |~LANGUAGEAUTHOREMAIL||l10n@landro.net|
 |~LANGISO6391CODE||nn|
@@ -160,10 +160,6 @@
 |Are you sure you want to delete this group?||Vil du verkeleg sletta denne gruppa?|
 |Delete Group Confirmation||Stadfesting av gruppesletting|
 |Cannot open temporary file for printing!||Klarer ikkje å opna mellombels fil for utskrift.|
-|Load Language File||Last inn språkfil|
-|Load a Language File||Last inn ei språkfil|
-|Select one of the languages in the list below.||Vel eitt av språka i lista nedanfor.|
-|Available Languages||Tilgjengelege språk|
 |&Help||&Hjelp|
 |&Help Contents||&Hjelpinnhald|
 |Open &Help File||Opna hjelpe&fila|
@@ -179,9 +175,6 @@
 |Workspace locked||Arbeidsflata er låst|
 |Loading error||Innlastingsfeil|
 |Language file cannot be opened!||Klarer ikkje å opna språkfila.|
-|Language file cannot be registered!||Klarer ikkje å registrera språkfila.|
-|The language file has been installed.||Språkfila er installert.|
-|You must restart KeePass in order to use the new language.||Du må starta om att KeePass for å ta i bruk det nye språket.|
 |Do you wish to restart KeePass now?||Vil du starta om att KeePass no?|
 |Restart KeePass?||Starta om att KeePass no?|
 |Application cannot be restarted automatically!||Programmet kan ikkje startast om att automatisk.|
@@ -197,7 +190,6 @@
 |&HTML File...||&HTML-fil …|
 |&XML File...||&XML-fil …|
 |&CSV File...||&CSV-fil …|
-|&Get more languages...||&Hent fleire språk …|
 |Start and exit||Start og avslutning|
 |Interface (GUI)||(Grafisk) grensesnitt|
 |Files||Filer|
@@ -255,11 +247,7 @@
 |<TAN>||<TAN>|
 |Print Pre&view...||F&ørehandsvising …|
 |About &Translation...||Om o&msetjinga …|
-|Translation information||Omsetjingsopplysningar|
-|Currently Used Language||Noverande språk|
-|Language File Version||Språkfilutgåve|
 |Author||Forfattar|
-|Translation Author Contact||Omsetjingskontakt|
 |&Rearrange||&Ordna på nytt|
 |&Sort Group List||&Sorter gruppelista|
 |Sort List by &Title||Sorter lista etter &tittel|
@@ -508,7 +496,6 @@
 |Print Options||Utskriftsval|
 |Print backup entries (entries in the 'Backup' group)||Skriv ut kopipostar (postar i tryggleikskopigruppa)|
 |Provider||Tilbydar|
-|Register Ctrl-Alt-K hot key (brings the KeePass window to front)||Registrer snarvegen Ctrl-Alt-K (tek KeePass-vindauget fremst)|
 |Regular expression||Regulære uttrykk|
 |Search...||Søk …|
 |TANs are imported into the currently selected group||TAN vert importerte til den gjeldande gruppa|
@@ -598,7 +585,6 @@
 |The local help file is a snapshot of the product documentation at the point when this product version was published. It is not updated automatically.||Den lokale hjelpfila blei sist oppdatert då denne produktutgåva blei publisert. Ho blir ikkje automatisk oppdatert.|
 |The online help center always contains the latest version of the product documentation. Internet connection is required.||Hjelpsenteret på nettet vil alltid innehalda den siste utgåva av produktdokumentasjonen. Internettilgang er påkravd.|
 |This option is disabled, because local help is not installed.||Dette valet er slått av sidan lokal hjelp ikkje er installert.|
-|Too little memory (RAM) available||For lite tilgjengeleg minne (RAM)|
 |Use advanced memory protection (DPAPI, only Windows Vista and higher)||Bruk avansert minnevern (DPAPI - berre for Windows Vista og seinare utgåver)|
 |Use the following help source when a "Help" button within KeePass is clicked:||Bruk denne hjelpekjelda når ein klikkar ein hjelp-knapp i KeePass:|
 |%u updates are available!||%u oppdateringar er tilgjengelege|
@@ -680,5 +666,24 @@
 |The generated password contains a placeholder. When using this password (e.g. by copying it to the clipboard or auto-typing it), the placeholder will be replaced, i.e. effectively a different password might be used.||Det laga passordet inneheld ein plasshaldar. Når du nyttar dette passordet (ved t.d. å kopiera det eller bruka auto-inntasting), vil plasshaldaren verta bytt ut. Det kan bety at eit anna passord kan verta teke i bruk.|
 |The regular expression is invalid.||Det regulære uttrykket er ugyldig.|
 |Tray icon||Systemfeltikon|
+
 |Failed to attach file:||Klarte ikkje å leggja til fila:|
+
 |The attachment is too large||Vedlegget er for stort|
+|Built-in||Innebygd|
+|Contact||Kontakt|
+|Currently used language||Gjeldande språk|
+|Do you want to open the application directory (in order to move or delete language files)?||Vil du opna programkatalogen (for å flytta eller sletta språkfiler)?|
+|File||Fil|
+|Get More &Languages...||Hent fleire spr&åk …|
+|Here you can change the user interface language.||Her endrar du språket til brukargrensesnittet.|
+|Installed Languages||Installerte språk|
+|Language file cannot be activated!||Klarer ikkje å ta språket i bruk.|
+|Loading language files directly from the application directory is not supported. Language files should instead be stored in the 'Languages' folder of the application directory.||Det er ikkje mogleg å lasta språkfiler frå rota av programkatalogen. Dei må i staden for lagrast i mappa 'Languages'.|
+|One or more language files have been found in the KeePass application directory.||Ei eller fleire språkfiler er funnen i KeePass sin programkatalog.|
+|Open &Folder||Opna &mappe|
+|Out of memory||For lite minne|
+|Register Ctrl+Alt+K hot key (brings the KeePass window to front)||Registrer snarvegen Ctrl+Alt+K (fører KeePass-vindauget fremst)|
+|Select Language||Vel språk|
+|The selected language has been activated. KeePass must be restarted in order to load the language.||Språket er valt, men KeePass må starta om att for å ta det i bruk.|
+|Translation Information||Omsetjingsopplysningar|
