--- a/Hungarian.lng
+++ b/Hungarian.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Magyar|
 |~LANGUAGEVERSION|
-|1.34|
+|1.35|
 |~LANGUAGEAUTHOR|
 |herka (1.13) • Zotius (1.18 verziótól)|
 |~LANGUAGEAUTHOREMAIL|
@@ -10,6 +10,32 @@
 |hu|
 |OK|
 |Rendben|
+|Built-in|
+|Beépített|
+|Contact|
+|Kapcsolat|
+|Do you want to open the application directory (in order to move or delete language files)?|
+|Valóban megnyitod az alkalmazás mappáját (a nyelvi fájlok áthelyezéséhez vagy törléséhez)?|
+|File|
+|Fájl|
+|Get More &Languages...|
+|További nyelvek beszerzése...|
+|Here you can change the user interface language.|
+|Itt megváltoztathatod a felhasználói felület nyelvét|
+|Installed Languages|
+|Telepített nyelvek|
+|Language file cannot be activated!|
+|A nyelvi fájl nem aktíválható!|
+|Loading language files directly from the application directory is not supported. Language files should instead be stored in the 'Languages' folder of the application directory.|
+|A nyelvi fájlok betöltése közvetlenül az alkalmazás mappájából nem támogatott. A nyelvi fájlokat ezentúl az alkalmazás mappája alatti 'Languages' mappában kell elhelyezni.|
+|One or more language files have been found in the KeePass application directory.|
+|Egy vagy több nyelvi fájl található a KeePass alkalmazás mappájában.|
+|Open &Folder|
+|&Mappa megnyitása|
+|Select Language|
+|Válassz nyelvet|
+|The selected language has been activated. KeePass must be restarted in order to load the language.|
+|A kiválasztott nyelv aktíválásra került. A KeePasst újra kell indítani a nyelvi fájl betöltéséhez.|
 |Select &Password Font|
 |Válassz &Jelszó betûtípust|
 |&Generate Random Password|
@@ -348,14 +374,6 @@
 |Csoport törlésének megerõsítése|
 |Cannot open temporary file for printing!|
 |Az ideiglenes fájlt nem lehet megnyitni  nyomtatáshoz!|
-|Load Language File|
-|Nyelvi fájl betöltése|
-|Load a Language File|
-|Egy nyelvi fájl betöltése|
-|Select one of the languages in the list below.|
-|Válassz ki egy nyelvet a lenti listából.|
-|Available Languages|
-|Elérhetõ nyelvek|
 |&Help|
 |&Súgó|
 |&Help Contents|
@@ -388,12 +406,6 @@
 |Betöltési hiba|
 |Language file cannot be opened!|
 |A nyelvi fájl nem nyitható meg!|
-|Language file cannot be registered!|
-|A nyelvi fájl nem regisztrálható!|
-|The language file has been installed.|
-|A nyelvi fájl telepítve.|
-|You must restart KeePass in order to use the new language.|
-|Újra kell indítanod a KeePass-t , hogy az új nyelv mûködjön.|
 |Do you wish to restart KeePass now?|
 |Most szeretnéd újraindítani a KeePass-t?|
 |Restart KeePass?|
@@ -428,8 +440,6 @@
 |&CSV fájl...|
 |&Import|
 |&Importálás|
-|&Get more languages...|
-|&További nyelvek...|
 |Start and exit|
 |Indítás és Kilépés|
 |Interface (GUI)|
@@ -1012,14 +1022,10 @@
 |A &fordításról...|
 |Translation Information|
 |Fordítás Információ|
-|Currently Used Language|
+|Currently used language|
 |Jelenleg használt nyelv|
-|Language File Version|
-|Nyelvi fájl verziója|
 |Author|
 |Szerzõ|
-|Translation Author Contact|
-|A szerzõ elérhetõsége|
 |&Rearrange|
 |&Újrarendez|
 |&Sort Group List|
